@@ -110,16 +110,14 @@ class Gmpc:MetaImage from Gtk:Event:Box{
 
 	override (G:Object)
 	void 
-	finalize (self)
+	finalize (G:Object *obj)
 	{
+		Self *self = GMPC_METAIMAGE(obj); 
 		if(self->_priv->meta_id)
 		{
 			meta_data_handle_remove_request(self->_priv->meta_id);
 			self->_priv->meta_id =  0;
 		}
-
-
-
 
 		if(self->_priv->status_signal){
 			g_signal_handler_disconnect(G_OBJECT(gmpcconn), self->_priv->status_signal);
