@@ -1024,22 +1024,10 @@ static void error_callback(MpdObj *mi, int error_id, char *error_msg, gpointer d
             password_dialog(FALSE);
         }
         else {
-/*
-            GtkWidget *dialog = gtk_message_dialog_new_with_markup(NULL,
-                    GTK_DIALOG_MODAL,
-                    GTK_MESSAGE_ERROR,
-                    GTK_BUTTONS_CLOSE,
-                    _("Mpd Returned the following error:\n<i>\"%s\"</i>"),
-                    error_msg);
-
-            g_signal_connect(G_OBJECT(dialog), "response", G_CALLBACK(gtk_widget_destroy), NULL);
-            gtk_widget_show_all(dialog);
-*/
-			
-            gchar *str = g_strdup_printf(_("The following error occured: %i:'%s'"), error_id, error_msg);
-			show_error_message(str, FALSE);
-			q_free(str);
-        }
+		gchar *str = g_strdup_printf(_("The following error occured: %i:'%s'"), error_id, error_msg);
+		show_error_message(str, FALSE);
+		q_free(str);
+	}
     }
 }
 
